# contextcache

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.bat  start.sh
configs/: context_cache_config.yaml  llm_config.example.json  orchestrator_config.yaml
context_cache/: __init__.py  cache_config.py  client.py  context_cache.py  kv_store.py  llama_cpp_engine.py  llama_server_engine.py  llm_adapter.py  llm_config.py  memory_manager.py  middleware.py  model_adapter.py  orchestrator.py  rope_utils.py  tool_router.py
eval_results/context_cache/: results_test_held_out_cached.jsonl  results_test_held_out_full_prefill.jsonl  results_test_held_out_group_cached.jsonl  results_test_seen_cached.jsonl  results_test_seen_full_prefill.jsonl  results_test_seen_group_cached.jsonl  results_test_unseen_cached.jsonl  results_test_unseen_full_prefill.jsonl  results_test_unseen_group_cached.jsonl  summary_all.json  summary_test_held_out_cached.json  summary_test_held_out_full_prefill.json  summary_test_held_out_group_cached.json  summary_test_seen_cached.json  summary_test_seen_full_prefill.json  summary_test_seen_group_cached.json  summary_test_unseen_cached.json  summary_test_unseen_full_prefill.json  summary_test_unseen_group_cached.json
eval_results/context_cache_benchmark/: benchmark_main.json  benchmark_scaling.json  (+1 more)
examples/: fastapi_integration.py  retail_assistant.py
paper/: main.tex
tests/: test_client.py  test_llm_adapter.py  test_llm_config.py  test_memory_manager.py  test_middleware.py  test_parse_tool_calls.py  test_server_formatting.py
(+19 files in other folders)
